fix: fix animation stacking issue and z-index

--- a/styles/style.css
+++ b/styles/style.css
@@ -28,7 +28,6 @@ body {
   border-radius: 20px;
   padding: 2rem;
   display: flex;
-  position: relative;
   flex-direction: column;
   gap: 30px;
   max-width: 600px;
@@ -205,10 +204,10 @@ body {
   position: fixed;
   top: 0;
   right: 0;
+  z-index: 9999;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  z-index: 100;
   height: max-content;
   gap: 12px;
   padding: 1.2rem 1.5rem;
@@ -218,6 +217,7 @@ body {
   .toast {
     transform: skewY(-3deg) translateX(100%);
     width: max-content;
+    z-index: 90;
     padding: 1.2rem;
     display: flex;
     gap: 12px;
@@ -295,7 +295,7 @@ body {
     box-shadow: 6px 6px 0 #000;
     animation: scaleUp 0.2s ease-in forwards;
 
-    &.hide{
+    &.hide {
       animation: scaleDown 0.3s ease forwards;
     }
 
